# ProteomicFigureGenerator

./: .gitignore  .replit  CONTRIBUTING.md  LICENSE  README.md  app.py  main.py  pyproject.toml  test_streamlit.py
.github/ISSUE_TEMPLATE/: bug_report.md
.streamlit/: config.toml
attached_assets/: HeLa.xlsx  app_v7.py
docs/: statistical_methods.md
example_data/: README.md
pages/: 1_📥_Data_Upload.py  2_🧪_Data_Processing.py  3_📈_Visualization.py
templates/: index.html
utils/: data_processing.py  data_processor.py  statistics.py  visualization.py  visualizations.py
